# mesh_ground_station-embedded_linux

./: CMakeLists.txt  README.md  app  arm-bbb-toolchain.cmake  commands.h  main.c  mesh_network_manager.c  mesh_network_manager.h
Packet Router/: packet_router.c  packet_router.h
Packet_Router/: main.c  main.h  packet_router.c  packet_router.h
UART_/: main.c  rx_queue.c  rx_queue.h  rx_thread.c  rx_thread.h  tx_thread.c  tx_thread.h  uart_globals.h  uart_init.c  uart_init.h  uart_manager.c  uart_manager.h
